# RAG-ChatBot

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/chatbot/: gradio_ui.py  main.py  main_ingest.py  qa_chain.py  rag_pipeline.py  retriever.py
src/chatbot/api/: db.py  schemas.py
src/chatbot/api/routes/: chat.py
src/chatbot/api/services/: chat_manager.py
src/chatbot/config/: logger.py  settings.py
src/chatbot/embeddings/: hf_embeddings.py
src/chatbot/ingestion/: chunker.py  document_loader.py  vector_store.py
